# ML-Vocational-Interest-Project

./: .dockerignore  .env  .flake8  .gitignore  .pylintrc  0.26.0  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.docker.txt  requirements.txt  start.sh
data/processed/: processed-dataset-balanced.csv  processed-dataset.csv  processed-dataset_smnote.csv
data/raw/: Nuevo Hoja de cálculo de Microsoft Excel.csv  data_carrers.csv  data_carrers.csv.xlsx  dataset-to-process.csv  old_data_carrers.csv  old_data_carrers_2.csv  student_interests.csv
notebooks/: Untitled-1.py  augmentation-data.ipynb  improve_model.ipynb  preprocess.ipynb  py_imp.py  testing_model.ipynb
notebooks/.ipynb_checkpoints/: testing_model-checkpoint.ipynb
scripts/: balance_dataset.py  clean_data_carrers.py
src/: main.py
src/config/: settings.py
src/config/deploy/: .env.dev  .env.prod  .env.test
src/features/: model_utils.py  prediction_router.py
src/utils/: logger.py  logger_interface.py  model_utils.py
