[tool.poetry]
name = "vocational_interest_api"
version = "0.1.0"
description = "API para gestión de intereses vocacionales"
authors = [
    "Alejandro Gamboa <agamboacj@gmail.com>",
    "Maria Gabriela Vasquez <marigabyvasquez@gmail.com>"
]
packages = [
    { include = "src", from = "." }
]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.115.7"
uvicorn = {extras = ["standard"], version = "0.34.0"}
sqlalchemy = "2.0.37"
psycopg2 = "2.9.10"
pydantic = { version = "2.10.6", extras = ["email"] }
pydantic-settings = "2.7.1"
python-dotenv = "1.0.1"
alembic = "1.14.1"
httpx = "0.28.1"
annotated-types = "0.7.0"
anyio = "4.8.0"
certifi = "2024.12.14"
click = "8.1.8"
colorama = "0.4.6"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
idna = "3.10"
Mako = "1.3.8"
MarkupSafe = "3.0.2"
sniffio = "1.3.1"
starlette = "0.45.3"
typing_extensions = "4.12.2"
black = "^25.0"
isort = "^6.0"


[tool.poetry.scripts]
start = "src.main:create_app"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
pylint = "^3.3.4"
mypy = "^1.15.0"
jwt = "^1.3.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"